# rag-variance-explainer

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  SECURITY.md  app.py  conftest.py  pyproject.toml  readme.md  requirements.txt  tests.py
.cursor/rules/: rag-finance.mdc
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
.opencode/skills/rag-finance/: SKILL.md
.streamlit/: config.toml
data/: _report.py  claude_all_questions.txt  claude_evaluation.txt  claude_judge.json  eval_questions.json  faithfulness_results.json  llm_outputs.json
docs/: 02. Progress & Technical Documentation.md  07. Roadmap & Execution Plan.md  11. Code Hardening Audit 22 Jul 2026.md  12. Phase 1 Structured Output.md  README.md  _Dashboard.md  _tuning_report.md  blog_draft.md  dataset.md  error_classification_worksheet.md  faithfulness-eval.md  mcp.md
docs/.obsidian/: workspace.json
landing/: .gitignore  package-lock.json  package.json  tailwind.config.js
landing/components/: AnimatedSection.jsx  BackToTop.jsx  DemoSample.jsx  DifferenceSection.jsx  EvidenceSection.jsx  FeaturesSection.jsx  Footer.jsx  HeroBackground.jsx  HeroDemoCard.jsx  HeroIllustration.jsx  HeroSection.jsx  HowItWorks.jsx  Navbar.jsx  ProblemSection.jsx  QuickStart.jsx  RoadmapSection.jsx  ScrollProgress.jsx  StarOnGitHub.jsx  TrustBar.jsx  UseCases.jsx  Vernie.jsx
landing/data/: constants.js
landing/hooks/: useTypewriter.js
landing/mascot/: Vernie-usage.txt  vernie-animations.css
landing/pages/: 404.js  _app.js  _document.js  index.js
landing/styles/: globals.css  vernie-animations.css
scripts/: update_readme_stats.py
src/: api.py  benchmark_methods.py  build_index.py  chunking.py  compact_judge_prompts.py  config.py  constants.py  cross_encoder.py  dataset_stats.py  embedding.py  eval_ablation.py  eval_faithfulness.py  eval_llm.py  eval_recall.py  export_judge_prompts.py  glossary.py  hybrid_search.py  ingest.py  llm.py  logging_config.py  nli.py  post_process.py  prompts.py  query_expansion.py  rag.py  retrieval.py  server.py  styles.css  verifier.py
