[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-variance-explainer"
version = "0.1.0"
description = "RAG pipeline for financial variance explanation using SEC filing MD&A sections"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "beautifulsoup4",
    "chromadb",
    "tiktoken",
    "llama-cpp-python",
    "python-dotenv",
    "pytest",
    "sentence-transformers",
    "numpy",
    "einops",
    "anthropic",
    "openai",
    "streamlit",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
