[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-variance-explainer"
version = "0.1.0"
description = "RAG pipeline for financial variance explanation using SEC filing MD&A sections"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.116.0",
    "beautifulsoup4==4.15.0",
    "chromadb==1.5.9",
    "llama-cpp-python==0.3.6",
    "numpy==2.4.6",
    "openai==2.45.0",
    "pytest==9.1.1",
    "python-dotenv==1.2.2",
    "rank-bm25==0.2.2",
    "requests==2.34.2",
    "scikit-learn==1.9.0",
    "sentence-transformers==5.6.0",
    "streamlit==1.59.2",
    "tiktoken==0.13.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 160
include = ["src/*.py", "app.py", "tests.py", "conftest.py", "scripts/*.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests.py" = ["SIM"]
"src/prompts.py" = ["E501"]
"src/compact_judge_prompts.py" = ["E501"]

[tool.bandit]
targets = ["src/"]
skips = ["B404", "B603"]

[tool.coverage.run]
omit = [
    "src/benchmark_methods.py",
    "src/compact_judge_prompts.py",
    "src/dataset_stats.py",
    "src/eval_*.py",
    "src/export_judge_prompts.py",
    "src/logging_config.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true
packages = "src"
exclude = [
    "venv",
    "__pycache__",
]
